--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to My Portfolio</h1>
-    <p>Contact me at: <!--email_off-->23f1001524@ds.study.iitm.ac.in<!--/email_off--></p>
+    <p>Contact me at: <!--email_off--><!--email_off-->23f1001524@ds.study.iitm.ac.in<!--/email_off--><!--/email_off--></p>
     <p>This page showcases my work and achievements.</p>
 </body>
 </html>
